Fix RTL spacing

--- a/src/components/ids-notification-banner/ids-notification-banner.scss
+++ b/src/components/ids-notification-banner/ids-notification-banner.scss
@@ -25,7 +25,7 @@ ids-hyperlink::part(link) {
   white-space: nowrap;
   line-height: 1;
   padding: 0;
-  margin-left: 5px;
+  margin: 0 5px;
 }
 
 .ids-notification-banner-button {
